package models;

import java.util.HashMap;

public class AnyCourse extends CurriculumRow {
    public AnyCourse(HashMap<CreditType, Float> credits) {
        super(credits);
    }
}
