package models;

public class Credit {
    private int value;
    private CreditType type;
}
