package models;

public enum CreditType {
    THEORY,
    PRACTICE
}
