package models;

public interface CurriculumBoxPassingStrategy {
}
