package models;

import java.util.Date;

public class DateTimePeriod {
    private Date start;
    private Date finish;
}
