package models;

public class Degree extends Entity {
    private String name;

    public Degree(String name) {
        this.name = name;
    }
}
