package models;

public enum EnrollmentPermissionType {

}
