package models;

public enum EnrollmentState {
    PASSED,
    FAILED,
    GRADE_VERIFIED,
    GRADE_NOT_VERIFIED,
    NOT_GRADED,
    WITHDRAWED,
    ELIMINATED,
    REGISTERED
}
