package models;

public class Faculty extends Entity {
    public String name;

    public Faculty(String name) {
        this.name = name;
    }
}
