package models;

public class PassAll implements CurriculumBoxPassingStrategy {
    
}
