package models;

public class PassSomeCredits implements CurriculumBoxPassingStrategy{
    private int minCredits;
}
