package models;

public class Professor extends Entity {
    private String employeeID;
    private Person person;

    Professor(int id) {
        super(id);
    }
}
