package models;

public enum SemesterState {
    REGISTERED,
    ELIMINATED,
    LEAVED,
    FAILED,
    FINISHED
}
