package models;

public enum SemesterTime {
    FALL,
    SPRING,
    SUMMER
}